--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "leeroy-autopost-bot",
   "version": "0.0.1",
   "scripts": {
-    "start": "node js/leeroy"
+    "start": "node js/twitter"
   },
   "dependencies": {
     "eth-lightwallet": "^3.0.1",
     "ethereumjs-tx": "^1.3.3",
     "lodash": "^4.17.4",
+    "node-fetch": "^2.0.0",
     "twitter": "^1.7.1",
     "web3": "^1.0.0-beta.29"
   }
